過濾無效動作 增加動作隨機性 增加合併訓練資料程式 方便整理資料 優化早停法邏輯

--- a/train.ipynb
+++ b/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "id": "e570259d",
    "metadata": {},
    "outputs": [
@@ -10,76 +10,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "共載入 533 筆樣本，29 個動作類別：['' 'Key.alt_l' 'Key.alt_l,Key.down' 'Key.alt_l,Key.left'\n",
-      " 'Key.alt_l,Key.right' 'Key.ctrl_l' 'Key.ctrl_l,Key.right' 'Key.down'\n",
+      "共載入 1412 筆樣本，70 個動作類別：['Key.alt_l' 'Key.alt_l,Key.down' 'Key.alt_l,Key.left'\n",
+      " 'Key.alt_l,Key.left,Key.ctrl_l,z' 'Key.alt_l,Key.right'\n",
+      " 'Key.alt_l,Key.right,z' 'Key.alt_l,z' 'Key.alt_l,z,Key.down'\n",
+      " 'Key.alt_l,z,Key.right' 'Key.ctrl_l' 'Key.ctrl_l,Key.alt_l,z,Key.right'\n",
+      " 'Key.ctrl_l,Key.right' 'Key.ctrl_l,Key.right,Key.alt_l'\n",
+      " 'Key.ctrl_l,Key.right,Key.alt_l,z' 'Key.ctrl_l,Key.right,z' 'Key.down'\n",
       " 'Key.left' 'Key.left,Key.alt_l' 'Key.left,Key.alt_l,Key.shift'\n",
-      " 'Key.left,Key.ctrl_l' 'Key.left,Key.right' 'Key.left,Key.shift'\n",
-      " 'Key.left,Key.up' 'Key.left,Key.up,Key.ctrl_l'\n",
-      " 'Key.left,Key.up,Key.shift' 'Key.left,z' 'Key.right'\n",
-      " 'Key.right,Key.ctrl_l' 'Key.right,Key.down' 'Key.right,Key.up'\n",
-      " 'Key.right,z' 'Key.shift,Key.ctrl_l' 'Key.shift,Key.right'\n",
-      " 'Key.shift,Key.up' 'Key.up' 'Key.up,Key.right' 'z,Key.right']\n",
-      "原始樣本數量：\n",
-      "  類別 0（）: 52 筆\n",
-      "  類別 18（Key.right）: 87 筆\n",
-      "  類別 28（z,Key.right）: 2 筆\n",
-      "  類別 6（Key.ctrl_l,Key.right）: 55 筆\n",
-      "  類別 8（Key.left）: 90 筆\n",
-      "  類別 26（Key.up）: 31 筆\n",
-      "  類別 14（Key.left,Key.up）: 8 筆\n",
-      "  類別 11（Key.left,Key.ctrl_l）: 112 筆\n",
-      "  類別 9（Key.left,Key.alt_l）: 11 筆\n",
-      "  類別 19（Key.right,Key.ctrl_l）: 35 筆\n",
-      "  類別 5（Key.ctrl_l）: 11 筆\n",
-      "  類別 7（Key.down）: 1 筆\n",
-      "  類別 22（Key.right,z）: 2 筆\n",
-      "  類別 10（Key.left,Key.alt_l,Key.shift）: 1 筆\n",
-      "  類別 4（Key.alt_l,Key.right）: 10 筆\n",
-      "  類別 27（Key.up,Key.right）: 3 筆\n",
-      "  類別 2（Key.alt_l,Key.down）: 5 筆\n",
-      "  類別 23（Key.shift,Key.ctrl_l）: 1 筆\n",
-      "  類別 25（Key.shift,Key.up）: 1 筆\n",
-      "  類別 21（Key.right,Key.up）: 2 筆\n",
-      "  類別 20（Key.right,Key.down）: 4 筆\n",
-      "  類別 24（Key.shift,Key.right）: 2 筆\n",
-      "  類別 15（Key.left,Key.up,Key.ctrl_l）: 1 筆\n",
-      "  類別 12（Key.left,Key.right）: 1 筆\n",
-      "  類別 3（Key.alt_l,Key.left）: 1 筆\n",
-      "  類別 1（Key.alt_l）: 1 筆\n",
-      "  類別 16（Key.left,Key.up,Key.shift）: 1 筆\n",
-      "  類別 13（Key.left,Key.shift）: 1 筆\n",
-      "  類別 17（Key.left,z）: 1 筆\n",
-      "\n",
-      "過採樣後樣本數量：\n",
-      "  類別 0（）: 112 筆\n",
-      "  類別 18（Key.right）: 112 筆\n",
-      "  類別 28（z,Key.right）: 112 筆\n",
-      "  類別 6（Key.ctrl_l,Key.right）: 112 筆\n",
-      "  類別 8（Key.left）: 112 筆\n",
-      "  類別 26（Key.up）: 112 筆\n",
-      "  類別 14（Key.left,Key.up）: 112 筆\n",
-      "  類別 11（Key.left,Key.ctrl_l）: 112 筆\n",
-      "  類別 9（Key.left,Key.alt_l）: 112 筆\n",
-      "  類別 19（Key.right,Key.ctrl_l）: 112 筆\n",
-      "  類別 5（Key.ctrl_l）: 112 筆\n",
-      "  類別 7（Key.down）: 112 筆\n",
-      "  類別 22（Key.right,z）: 112 筆\n",
-      "  類別 10（Key.left,Key.alt_l,Key.shift）: 112 筆\n",
-      "  類別 4（Key.alt_l,Key.right）: 112 筆\n",
-      "  類別 27（Key.up,Key.right）: 112 筆\n",
-      "  類別 2（Key.alt_l,Key.down）: 112 筆\n",
-      "  類別 23（Key.shift,Key.ctrl_l）: 112 筆\n",
-      "  類別 25（Key.shift,Key.up）: 112 筆\n",
-      "  類別 21（Key.right,Key.up）: 112 筆\n",
-      "  類別 20（Key.right,Key.down）: 112 筆\n",
-      "  類別 24（Key.shift,Key.right）: 112 筆\n",
-      "  類別 15（Key.left,Key.up,Key.ctrl_l）: 112 筆\n",
-      "  類別 12（Key.left,Key.right）: 112 筆\n",
-      "  類別 3（Key.alt_l,Key.left）: 112 筆\n",
-      "  類別 1（Key.alt_l）: 112 筆\n",
-      "  類別 16（Key.left,Key.up,Key.shift）: 112 筆\n",
-      "  類別 13（Key.left,Key.shift）: 112 筆\n",
-      "  類別 17（Key.left,z）: 112 筆\n"
+      " 'Key.left,Key.alt_l,z' 'Key.left,Key.ctrl_l'\n",
+      " 'Key.left,Key.ctrl_l,Key.alt_l' 'Key.left,Key.ctrl_l,z'\n",
+      " 'Key.left,Key.down' 'Key.left,Key.right' 'Key.left,Key.right,z'\n",
+      " 'Key.left,Key.shift' 'Key.left,Key.shift,Key.ctrl_l'\n",
+      " 'Key.left,Key.shift,Key.up' 'Key.left,Key.up'\n",
+      " 'Key.left,Key.up,Key.ctrl_l' 'Key.left,Key.up,Key.shift'\n",
+      " 'Key.left,Key.up,z' 'Key.left,z' 'Key.left,z,Key.ctrl_l' 'Key.right'\n",
+      " 'Key.right,Key.alt_l' 'Key.right,Key.alt_l,Key.ctrl_l'\n",
+      " 'Key.right,Key.alt_l,z' 'Key.right,Key.ctrl_l'\n",
+      " 'Key.right,Key.ctrl_l,Key.alt_l' 'Key.right,Key.ctrl_l,Key.shift'\n",
+      " 'Key.right,Key.ctrl_l,z' 'Key.right,Key.down' 'Key.right,Key.shift'\n",
+      " 'Key.right,Key.up' 'Key.right,z' 'Key.right,z,Key.ctrl_l'\n",
+      " 'Key.right,z,Key.down' 'Key.shift' 'Key.shift,Key.ctrl_l'\n",
+      " 'Key.shift,Key.down' 'Key.shift,Key.right'\n",
+      " 'Key.shift,Key.right,Key.ctrl_l' 'Key.shift,Key.right,z,Key.ctrl_l'\n",
+      " 'Key.shift,Key.up' 'Key.shift,Key.up,z' 'Key.shift,z' 'Key.up'\n",
+      " 'Key.up,Key.left' 'Key.up,Key.left,z' 'Key.up,Key.right'\n",
+      " 'Key.up,Key.right,Key.alt_l' 'Key.up,Key.right,z' 'Key.up,Key.shift'\n",
+      " 'Key.up,z' 'c,Key.ctrl_l,z' 'z' 'z,Key.down' 'z,Key.right']\n"
      ]
     }
    ],
@@ -93,8 +49,27 @@
     "from torch import nn\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "\n",
-    "# 讀取 data 資料夾\n",
-    "def load_data(data_dir=\"data\"):\n",
+    "CONTROL_CHAR_MAP = {\n",
+    "    '\\x03': 'c',  # Ctrl+C\n",
+    "    '\\x1a': 'z',  # Ctrl+Z\n",
+    "    '\\x18': 'x',  # Ctrl+X\n",
+    "    '\\x08': 'Backspace',\n",
+    "    # 如果你知道還有哪些組合你會按，可以加進來\n",
+    "}\n",
+    "\n",
+    "def clean_action(action: str) -> str:\n",
+    "    for ctrl_char, key_name in CONTROL_CHAR_MAP.items():\n",
+    "        action = action.replace(ctrl_char, key_name)\n",
+    "    return action.strip()\n",
+    "\n",
+    "def is_valid_action(action: str) -> bool:\n",
+    "    keywords = [\n",
+    "        \"Key.up\", \"Key.down\", \"Key.left\", \"Key.right\",  # 上下左右\n",
+    "        \"Key.shift\", \"Key.ctrl_l\", \"Key.alt_l\", \"z\"     # 喝水/技能/跳\n",
+    "    ]\n",
+    "    return any(kw in action for kw in keywords)\n",
+    "\n",
+    "def load_filtered_data(data_dir=\"merged_data\"):\n",
     "    X = []\n",
     "    y = []\n",
     "    all_txt_files = sorted([f for f in os.listdir(data_dir) if f.endswith(\".txt\")])\n",
@@ -107,74 +82,34 @@
     "        if not os.path.exists(img_path):\n",
     "            continue\n",
     "\n",
-    "        # 載入圖像：128x128 單通道\n",
-    "        img = Image.open(img_path).convert(\"L\")\n",
-    "        img_np = np.array(img) / 255.0  # normalize to 0~1\n",
-    "        X.append(img_np)\n",
-    "\n",
     "        # 載入動作\n",
     "        with open(txt_path, \"r\") as f:\n",
-    "            action = f.read().strip()\n",
-    "            y.append(action)\n",
+    "            raw = f.read().strip()\n",
+    "            action = clean_action(raw)\n",
+    "\n",
+    "        if not is_valid_action(action):\n",
+    "            continue  # 過濾不要的動作\n",
+    "\n",
+    "        # 載入圖像：128x128 單通道\n",
+    "        img = Image.open(img_path).convert(\"L\")\n",
+    "        img_np = np.array(img) / 255.0\n",
+    "        X.append(img_np)\n",
+    "        y.append(action)\n",
     "\n",
     "    return np.array(X), np.array(y)\n",
     "\n",
-    "X, y_raw = load_data()\n",
-    "\n",
-    "# 類別編碼器：把所有動作轉為分類標籤\n",
+    "# 載入資料 + 過濾\n",
+    "X, y_raw = load_filtered_data()\n",
     "encoder = LabelEncoder()\n",
     "y = encoder.fit_transform(y_raw)\n",
     "num_classes = len(encoder.classes_)\n",
     "\n",
-    "print(f\"共載入 {len(X)} 筆樣本，{num_classes} 個動作類別：{encoder.classes_}\")\n",
-    "\n",
-    "# 在下面寫一個轉換函數 把X,y丟進去他會針對少數類別做過採樣並返回處理後的X,y 讓每個類別數量都等於 最多樣本的那個類別 然後print每個類別的原始樣本數量跟過採樣後樣本數量\n",
-    "from collections import Counter\n",
-    "import numpy as np\n",
-    "\n",
-    "def oversample_minority_classes(X, y):\n",
-    "    # 統計每個類別的樣本數量\n",
-    "    counter = Counter(y)\n",
-    "    max_count = max(counter.values())\n",
-    "\n",
-    "    print(\"原始樣本數量：\")\n",
-    "    for label, count in counter.items():\n",
-    "        print(f\"  類別 {label}（{encoder.inverse_transform([label])[0]}）: {count} 筆\")\n",
-    "\n",
-    "    # 分類資料收集\n",
-    "    class_to_indices = {label: np.where(y == label)[0] for label in counter}\n",
-    "    new_X = []\n",
-    "    new_y = []\n",
-    "\n",
-    "    for label, indices in class_to_indices.items():\n",
-    "        count = len(indices)\n",
-    "        needed = max_count - count\n",
-    "        # 原始樣本先加入\n",
-    "        new_X.extend(X[indices])\n",
-    "        new_y.extend(y[indices])\n",
-    "        # 隨機過採樣補足\n",
-    "        if needed > 0:\n",
-    "            sampled_indices = np.random.choice(indices, size=needed, replace=True)\n",
-    "            new_X.extend(X[sampled_indices])\n",
-    "            new_y.extend(y[sampled_indices])\n",
-    "\n",
-    "    new_X = np.array(new_X)\n",
-    "    new_y = np.array(new_y)\n",
-    "\n",
-    "    # 統計過採樣後的結果\n",
-    "    new_counter = Counter(new_y)\n",
-    "    print(\"\\n過採樣後樣本數量：\")\n",
-    "    for label, count in new_counter.items():\n",
-    "        print(f\"  類別 {label}（{encoder.inverse_transform([label])[0]}）: {count} 筆\")\n",
-    "\n",
-    "    return new_X, new_y\n",
-    "X_balanced, y_balanced = oversample_minority_classes(X, y)\n",
-    "X,y = X_balanced, y_balanced"
+    "print(f\"共載入 {len(X)} 筆樣本，{num_classes} 個動作類別：{encoder.classes_}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "9b238df6",
    "metadata": {},
    "outputs": [],
@@ -209,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "d5120cfc",
    "metadata": {},
    "outputs": [
@@ -217,37 +152,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1 | Train Loss: 2.5855 | Val Loss: 1.3637 | Val Acc: 0.5954\n",
-      "Epoch 2 | Train Loss: 0.9892 | Val Loss: 0.9538 | Val Acc: 0.7108\n",
-      "Epoch 3 | Train Loss: 0.6548 | Val Loss: 0.6949 | Val Acc: 0.7738\n",
-      "Epoch 4 | Train Loss: 0.5027 | Val Loss: 0.6672 | Val Acc: 0.8138\n",
-      "Epoch 5 | Train Loss: 0.4307 | Val Loss: 0.6290 | Val Acc: 0.7969\n",
-      "Epoch 6 | Train Loss: 0.3446 | Val Loss: 0.5140 | Val Acc: 0.8292\n",
-      "Epoch 7 | Train Loss: 0.2887 | Val Loss: 0.5477 | Val Acc: 0.8431\n",
-      "Epoch 8 | Train Loss: 0.2838 | Val Loss: 0.5705 | Val Acc: 0.8262\n",
-      "Epoch 9 | Train Loss: 0.2389 | Val Loss: 0.4542 | Val Acc: 0.8477\n",
-      "Epoch 10 | Train Loss: 0.1876 | Val Loss: 0.4972 | Val Acc: 0.8585\n",
-      "Epoch 11 | Train Loss: 0.1589 | Val Loss: 0.4771 | Val Acc: 0.8769\n",
-      "Epoch 12 | Train Loss: 0.1592 | Val Loss: 0.4333 | Val Acc: 0.8738\n",
-      "Epoch 13 | Train Loss: 0.1241 | Val Loss: 0.5371 | Val Acc: 0.8615\n",
-      "Epoch 14 | Train Loss: 0.1345 | Val Loss: 0.4579 | Val Acc: 0.8892\n",
-      "Epoch 15 | Train Loss: 0.1077 | Val Loss: 0.4645 | Val Acc: 0.8877\n",
-      "Epoch 16 | Train Loss: 0.0869 | Val Loss: 0.4145 | Val Acc: 0.9000\n",
-      "Epoch 17 | Train Loss: 0.0736 | Val Loss: 0.4188 | Val Acc: 0.9015\n",
-      "Epoch 18 | Train Loss: 0.0714 | Val Loss: 0.4028 | Val Acc: 0.9092\n",
-      "Epoch 19 | Train Loss: 0.0601 | Val Loss: 0.3959 | Val Acc: 0.9046\n",
-      "Epoch 20 | Train Loss: 0.0626 | Val Loss: 0.3925 | Val Acc: 0.9138\n",
-      "Epoch 21 | Train Loss: 0.0508 | Val Loss: 0.4021 | Val Acc: 0.9046\n",
-      "Epoch 22 | Train Loss: 0.0505 | Val Loss: 0.4240 | Val Acc: 0.9031\n",
-      "Epoch 23 | Train Loss: 0.0684 | Val Loss: 0.4752 | Val Acc: 0.8969\n",
-      "Epoch 24 | Train Loss: 0.0535 | Val Loss: 0.4041 | Val Acc: 0.9246\n",
-      "Epoch 25 | Train Loss: 0.0493 | Val Loss: 0.3969 | Val Acc: 0.9123\n",
-      "Epoch 26 | Train Loss: 0.0440 | Val Loss: 0.4711 | Val Acc: 0.9077\n",
-      "Epoch 27 | Train Loss: 0.0453 | Val Loss: 0.5231 | Val Acc: 0.9031\n",
-      "Epoch 28 | Train Loss: 0.0348 | Val Loss: 0.5043 | Val Acc: 0.9123\n",
-      "Epoch 29 | Train Loss: 0.0277 | Val Loss: 0.5470 | Val Acc: 0.9062\n",
-      "Epoch 30 | Train Loss: 0.0316 | Val Loss: 0.5168 | Val Acc: 0.9154\n",
-      "Early stopping at epoch 30\n"
+      "Epoch 1 | Train Loss: 3.1247 | Train Acc: 0.1727 | Val Loss: 3.0731 | Val Acc: 0.1767\n",
+      "Epoch 2 | Train Loss: 2.8686 | Train Acc: 0.1816 | Val Loss: 3.0770 | Val Acc: 0.1555\n",
+      "Epoch 3 | Train Loss: 2.7902 | Train Acc: 0.2037 | Val Loss: 2.9767 | Val Acc: 0.1802\n",
+      "Epoch 4 | Train Loss: 2.6607 | Train Acc: 0.2578 | Val Loss: 2.9567 | Val Acc: 0.2049\n",
+      "Epoch 5 | Train Loss: 2.5496 | Train Acc: 0.2941 | Val Loss: 2.9098 | Val Acc: 0.2191\n",
+      "Epoch 6 | Train Loss: 2.4082 | Train Acc: 0.2914 | Val Loss: 2.8849 | Val Acc: 0.2509\n",
+      "Epoch 7 | Train Loss: 2.2822 | Train Acc: 0.3224 | Val Loss: 3.0043 | Val Acc: 0.2544\n",
+      "Epoch 8 | Train Loss: 2.1547 | Train Acc: 0.3446 | Val Loss: 3.0219 | Val Acc: 0.2261\n",
+      "Epoch 9 | Train Loss: 2.0307 | Train Acc: 0.3685 | Val Loss: 3.0012 | Val Acc: 0.2686\n",
+      "Epoch 10 | Train Loss: 1.9146 | Train Acc: 0.3809 | Val Loss: 3.1685 | Val Acc: 0.2580\n",
+      "Epoch 11 | Train Loss: 1.7768 | Train Acc: 0.4207 | Val Loss: 3.3866 | Val Acc: 0.2898\n",
+      "Epoch 12 | Train Loss: 1.6474 | Train Acc: 0.4694 | Val Loss: 3.3392 | Val Acc: 0.2155\n",
+      "Epoch 13 | Train Loss: 1.5396 | Train Acc: 0.4810 | Val Loss: 3.3879 | Val Acc: 0.2580\n",
+      "Epoch 14 | Train Loss: 1.4036 | Train Acc: 0.5279 | Val Loss: 3.7251 | Val Acc: 0.2297\n",
+      "Epoch 15 | Train Loss: 1.3077 | Train Acc: 0.5509 | Val Loss: 4.0023 | Val Acc: 0.2580\n",
+      "Epoch 16 | Train Loss: 1.1924 | Train Acc: 0.6005 | Val Loss: 4.1262 | Val Acc: 0.2367\n",
+      "Epoch 17 | Train Loss: 1.1004 | Train Acc: 0.6112 | Val Loss: 4.2139 | Val Acc: 0.2509\n",
+      "Epoch 18 | Train Loss: 1.0079 | Train Acc: 0.6714 | Val Loss: 4.4050 | Val Acc: 0.2438\n",
+      "Epoch 19 | Train Loss: 0.9349 | Train Acc: 0.6838 | Val Loss: 4.3741 | Val Acc: 0.2403\n",
+      "Epoch 20 | Train Loss: 0.8617 | Train Acc: 0.7192 | Val Loss: 4.5872 | Val Acc: 0.2367\n",
+      "Epoch 21 | Train Loss: 0.7873 | Train Acc: 0.7298 | Val Loss: 4.9170 | Val Acc: 0.2615\n",
+      "Early stopping at epoch 21\n"
      ]
     }
    ],
@@ -259,6 +185,8 @@
     "\n",
     "# 資料分割與 Dataloader\n",
     "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "# 對訓練集過採樣\n",
+    "#X_train, y_train = oversample_minority_classes(X_train, y_train)\n",
     "train_ds = ImageActionDataset(X_train, y_train)\n",
     "val_ds = ImageActionDataset(X_val, y_val)\n",
     "train_loader = DataLoader(train_ds, batch_size=32, shuffle=True)\n",
@@ -272,6 +200,7 @@
     "\n",
     "# Early stopping 參數\n",
     "best_val_loss = float('inf')\n",
+    "best_val_accuracy = 0.0\n",
     "patience = 10  # 容忍 10 次沒改善\n",
     "counter = 0\n",
     "best_model_state = None\n",
@@ -280,6 +209,8 @@
     "    # 訓練階段\n",
     "    model.train()\n",
     "    total_loss = 0\n",
+    "    correct = 0\n",
+    "    total = 0\n",
     "    for xb, yb in train_loader:\n",
     "        xb, yb = xb.to(device), yb.to(device)\n",
     "        pred = model(xb)\n",
@@ -289,8 +220,12 @@
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        total_loss += loss.item()\n",
+    "        _, predicted = torch.max(pred, 1)\n",
+    "        correct += (predicted == yb).sum().item()\n",
+    "        total += yb.size(0)\n",
     "    \n",
     "    avg_train_loss = total_loss / len(train_loader)\n",
+    "    train_accuracy = correct / total\n",
     "\n",
     "    # 驗證階段\n",
     "    model.eval()\n",
@@ -310,11 +245,11 @@
     "    avg_val_loss = val_loss / len(val_loader)\n",
     "    val_accuracy = correct / total\n",
     "\n",
-    "    print(f\"Epoch {epoch+1} | Train Loss: {avg_train_loss:.4f} | Val Loss: {avg_val_loss:.4f} | Val Acc: {val_accuracy:.4f}\")\n",
+    "    print(f\"Epoch {epoch+1} | Train Loss: {avg_train_loss:.4f} | Train Acc: {train_accuracy:.4f} | Val Loss: {avg_val_loss:.4f} | Val Acc: {val_accuracy:.4f}\")\n",
     "\n",
     "    # Early stopping 檢查\n",
-    "    if avg_val_loss < best_val_loss:\n",
-    "        best_val_loss = avg_val_loss\n",
+    "    if val_accuracy > best_val_accuracy: \n",
+    "        best_val_accuracy = val_accuracy\n",
     "        best_model_state = model.state_dict()\n",
     "        counter = 0\n",
     "    else:\n",
