--- a/train.ipynb
+++ b/train.ipynb
@@ -2,40 +2,82 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "e570259d",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 6400/6400 [00:51<00:00, 125.19it/s] \n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "共載入 1412 筆樣本，70 個動作類別：['Key.alt_l' 'Key.alt_l,Key.down' 'Key.alt_l,Key.left'\n",
+      "共載入 5859 筆樣本，155 個動作類別：['Key.alt_l' 'Key.alt_l,Key.ctrl_l,Key.left'\n",
+      " 'Key.alt_l,Key.ctrl_l,z,Key.left' 'Key.alt_l,Key.down'\n",
+      " 'Key.alt_l,Key.left' 'Key.alt_l,Key.left,Key.ctrl_l'\n",
       " 'Key.alt_l,Key.left,Key.ctrl_l,z' 'Key.alt_l,Key.right'\n",
-      " 'Key.alt_l,Key.right,z' 'Key.alt_l,z' 'Key.alt_l,z,Key.down'\n",
-      " 'Key.alt_l,z,Key.right' 'Key.ctrl_l' 'Key.ctrl_l,Key.alt_l,z,Key.right'\n",
-      " 'Key.ctrl_l,Key.right' 'Key.ctrl_l,Key.right,Key.alt_l'\n",
-      " 'Key.ctrl_l,Key.right,Key.alt_l,z' 'Key.ctrl_l,Key.right,z' 'Key.down'\n",
+      " 'Key.alt_l,Key.right,z' 'Key.alt_l,z' 'Key.alt_l,z,Key.ctrl_l'\n",
+      " 'Key.alt_l,z,Key.down' 'Key.alt_l,z,Key.left' 'Key.alt_l,z,Key.right'\n",
+      " 'Key.alt_l,z,Key.right,Key.left' 'Key.alt_l,z,Key.up,Key.left'\n",
+      " 'Key.ctrl_l' 'Key.ctrl_l,Key.alt_l,Key.left'\n",
+      " 'Key.ctrl_l,Key.alt_l,z,Key.right' 'Key.ctrl_l,Key.left'\n",
+      " 'Key.ctrl_l,Key.left,Key.alt_l,z' 'Key.ctrl_l,Key.left,z'\n",
+      " 'Key.ctrl_l,Key.left,z,Key.alt_l' 'Key.ctrl_l,Key.right'\n",
+      " 'Key.ctrl_l,Key.right,Key.alt_l' 'Key.ctrl_l,Key.right,Key.alt_l,z'\n",
+      " 'Key.ctrl_l,Key.right,z' 'Key.ctrl_l,Key.right,z,Key.alt_l'\n",
+      " 'Key.ctrl_l,Key.shift' 'Key.ctrl_l,Key.shift,Key.left'\n",
+      " 'Key.ctrl_l,Key.shift,Key.right,z' 'Key.ctrl_l,c' 'Key.ctrl_l,c,z'\n",
+      " 'Key.ctrl_l,z' 'Key.ctrl_l,z,Key.alt_l,Key.left' 'Key.ctrl_l,z,Key.left'\n",
+      " 'Key.ctrl_l,z,Key.left,Key.alt_l' 'Key.ctrl_l,z,Key.right'\n",
+      " 'Key.ctrl_l,z,Key.right,Key.alt_l' 'Key.down' 'Key.down,Key.alt_l,z'\n",
+      " 'Key.down,Key.left' 'Key.down,Key.left,z' 'Key.down,Key.right,z'\n",
+      " 'Key.down,z' 'Key.down,z,Key.alt_l' 'Key.down,z,Key.right' 'Key.esc,z'\n",
       " 'Key.left' 'Key.left,Key.alt_l' 'Key.left,Key.alt_l,Key.shift'\n",
       " 'Key.left,Key.alt_l,z' 'Key.left,Key.ctrl_l'\n",
       " 'Key.left,Key.ctrl_l,Key.alt_l' 'Key.left,Key.ctrl_l,z'\n",
-      " 'Key.left,Key.down' 'Key.left,Key.right' 'Key.left,Key.right,z'\n",
+      " 'Key.left,Key.down' 'Key.left,Key.down,z' 'Key.left,Key.right'\n",
+      " 'Key.left,Key.right,Key.alt_l,z' 'Key.left,Key.right,z'\n",
       " 'Key.left,Key.shift' 'Key.left,Key.shift,Key.ctrl_l'\n",
       " 'Key.left,Key.shift,Key.up' 'Key.left,Key.up'\n",
       " 'Key.left,Key.up,Key.ctrl_l' 'Key.left,Key.up,Key.shift'\n",
-      " 'Key.left,Key.up,z' 'Key.left,z' 'Key.left,z,Key.ctrl_l' 'Key.right'\n",
-      " 'Key.right,Key.alt_l' 'Key.right,Key.alt_l,Key.ctrl_l'\n",
-      " 'Key.right,Key.alt_l,z' 'Key.right,Key.ctrl_l'\n",
+      " 'Key.left,Key.up,z' 'Key.left,z' 'Key.left,z,Key.alt_l'\n",
+      " 'Key.left,z,Key.alt_l,Key.right' 'Key.left,z,Key.ctrl_l'\n",
+      " 'Key.left,z,Key.right,Key.alt_l' 'Key.right' 'Key.right,Key.alt_l'\n",
+      " 'Key.right,Key.alt_l,Key.ctrl_l' 'Key.right,Key.alt_l,z'\n",
+      " 'Key.right,Key.alt_l,z,Key.ctrl_l' 'Key.right,Key.ctrl_l'\n",
       " 'Key.right,Key.ctrl_l,Key.alt_l' 'Key.right,Key.ctrl_l,Key.shift'\n",
-      " 'Key.right,Key.ctrl_l,z' 'Key.right,Key.down' 'Key.right,Key.shift'\n",
-      " 'Key.right,Key.up' 'Key.right,z' 'Key.right,z,Key.ctrl_l'\n",
-      " 'Key.right,z,Key.down' 'Key.shift' 'Key.shift,Key.ctrl_l'\n",
-      " 'Key.shift,Key.down' 'Key.shift,Key.right'\n",
-      " 'Key.shift,Key.right,Key.ctrl_l' 'Key.shift,Key.right,z,Key.ctrl_l'\n",
-      " 'Key.shift,Key.up' 'Key.shift,Key.up,z' 'Key.shift,z' 'Key.up'\n",
-      " 'Key.up,Key.left' 'Key.up,Key.left,z' 'Key.up,Key.right'\n",
-      " 'Key.up,Key.right,Key.alt_l' 'Key.up,Key.right,z' 'Key.up,Key.shift'\n",
-      " 'Key.up,z' 'c,Key.ctrl_l,z' 'z' 'z,Key.down' 'z,Key.right']\n"
+      " 'Key.right,Key.ctrl_l,z' 'Key.right,Key.ctrl_l,z,Key.alt_l'\n",
+      " 'Key.right,Key.ctrl_l,z,Key.shift' 'Key.right,Key.down'\n",
+      " 'Key.right,Key.left' 'Key.right,Key.shift'\n",
+      " 'Key.right,Key.shift,Key.ctrl_l' 'Key.right,Key.shift,z'\n",
+      " 'Key.right,Key.shift,z,Key.ctrl_l' 'Key.right,Key.up' 'Key.right,z'\n",
+      " 'Key.right,z,Key.alt_l' 'Key.right,z,Key.alt_l,Key.ctrl_l'\n",
+      " 'Key.right,z,Key.alt_l,Key.up' 'Key.right,z,Key.ctrl_l'\n",
+      " 'Key.right,z,Key.down' 'Key.right,z,Key.left' 'Key.right,z,Key.shift'\n",
+      " 'Key.right,z,Key.up' 'Key.right,z,Key.up,Key.left' 'Key.right,z,z'\n",
+      " 'Key.shift' 'Key.shift,Key.ctrl_l' 'Key.shift,Key.ctrl_l,Key.left'\n",
+      " 'Key.shift,Key.down' 'Key.shift,Key.left' 'Key.shift,Key.left,Key.ctrl_l'\n",
+      " 'Key.shift,Key.right' 'Key.shift,Key.right,Key.ctrl_l'\n",
+      " 'Key.shift,Key.right,z' 'Key.shift,Key.right,z,Key.ctrl_l'\n",
+      " 'Key.shift,Key.right,z,Key.down' 'Key.shift,Key.right,z,Key.up'\n",
+      " 'Key.shift,Key.up' 'Key.shift,Key.up,Key.left'\n",
+      " 'Key.shift,Key.up,Key.left,z' 'Key.shift,Key.up,z' 'Key.shift,z'\n",
+      " 'Key.shift,z,Key.ctrl_l' 'Key.shift,z,Key.left' 'Key.shift,z,Key.right'\n",
+      " 'Key.shift,z,Key.up' 'Key.up' 'Key.up,Key.left' 'Key.up,Key.left,z'\n",
+      " 'Key.up,Key.right' 'Key.up,Key.right,Key.alt_l'\n",
+      " 'Key.up,Key.right,Key.alt_l,z' 'Key.up,Key.right,z'\n",
+      " 'Key.up,Key.right,z,Key.alt_l' 'Key.up,Key.shift' 'Key.up,z'\n",
+      " 'c,Key.ctrl_l,z' 'i,z' 'z' 'z,Key.alt_l' 'z,Key.alt_l,Key.left'\n",
+      " 'z,Key.alt_l,Key.right' 'z,Key.ctrl_l' 'z,Key.ctrl_l,Key.down'\n",
+      " 'z,Key.ctrl_l,Key.left' 'z,Key.down' 'z,Key.left' 'z,Key.left,Key.alt_l'\n",
+      " 'z,Key.right' 'z,Key.right,Key.alt_l' 'z,Key.right,Key.ctrl_l'\n",
+      " 'z,Key.shift' 'z,Key.shift,Key.left' 'z,Key.shift,Key.up' 'z,Key.up'\n",
+      " 'z,Key.up,Key.left' 'z,Key.up,x' 'z,z,Key.left' 'z,z,Key.up']\n"
      ]
     }
    ],
@@ -48,7 +90,7 @@
     "import torch\n",
     "from torch import nn\n",
     "from torch.utils.data import Dataset, DataLoader\n",
-    "\n",
+    "from tqdm import tqdm\n",
     "CONTROL_CHAR_MAP = {\n",
     "    '\\x03': 'c',  # Ctrl+C\n",
     "    '\\x1a': 'z',  # Ctrl+Z\n",
@@ -74,7 +116,7 @@
     "    y = []\n",
     "    all_txt_files = sorted([f for f in os.listdir(data_dir) if f.endswith(\".txt\")])\n",
     "\n",
-    "    for txt_file in all_txt_files:\n",
+    "    for txt_file in tqdm(all_txt_files):\n",
     "        base_name = txt_file.replace(\".txt\", \"\")\n",
     "        img_path = os.path.join(data_dir, f\"{base_name}.png\")\n",
     "        txt_path = os.path.join(data_dir, txt_file)\n",
@@ -109,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "9b238df6",
    "metadata": {},
    "outputs": [],
@@ -144,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "d5120cfc",
    "metadata": {},
    "outputs": [
@@ -152,28 +194,68 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1 | Train Loss: 3.1247 | Train Acc: 0.1727 | Val Loss: 3.0731 | Val Acc: 0.1767\n",
-      "Epoch 2 | Train Loss: 2.8686 | Train Acc: 0.1816 | Val Loss: 3.0770 | Val Acc: 0.1555\n",
-      "Epoch 3 | Train Loss: 2.7902 | Train Acc: 0.2037 | Val Loss: 2.9767 | Val Acc: 0.1802\n",
-      "Epoch 4 | Train Loss: 2.6607 | Train Acc: 0.2578 | Val Loss: 2.9567 | Val Acc: 0.2049\n",
-      "Epoch 5 | Train Loss: 2.5496 | Train Acc: 0.2941 | Val Loss: 2.9098 | Val Acc: 0.2191\n",
-      "Epoch 6 | Train Loss: 2.4082 | Train Acc: 0.2914 | Val Loss: 2.8849 | Val Acc: 0.2509\n",
-      "Epoch 7 | Train Loss: 2.2822 | Train Acc: 0.3224 | Val Loss: 3.0043 | Val Acc: 0.2544\n",
-      "Epoch 8 | Train Loss: 2.1547 | Train Acc: 0.3446 | Val Loss: 3.0219 | Val Acc: 0.2261\n",
-      "Epoch 9 | Train Loss: 2.0307 | Train Acc: 0.3685 | Val Loss: 3.0012 | Val Acc: 0.2686\n",
-      "Epoch 10 | Train Loss: 1.9146 | Train Acc: 0.3809 | Val Loss: 3.1685 | Val Acc: 0.2580\n",
-      "Epoch 11 | Train Loss: 1.7768 | Train Acc: 0.4207 | Val Loss: 3.3866 | Val Acc: 0.2898\n",
-      "Epoch 12 | Train Loss: 1.6474 | Train Acc: 0.4694 | Val Loss: 3.3392 | Val Acc: 0.2155\n",
-      "Epoch 13 | Train Loss: 1.5396 | Train Acc: 0.4810 | Val Loss: 3.3879 | Val Acc: 0.2580\n",
-      "Epoch 14 | Train Loss: 1.4036 | Train Acc: 0.5279 | Val Loss: 3.7251 | Val Acc: 0.2297\n",
-      "Epoch 15 | Train Loss: 1.3077 | Train Acc: 0.5509 | Val Loss: 4.0023 | Val Acc: 0.2580\n",
-      "Epoch 16 | Train Loss: 1.1924 | Train Acc: 0.6005 | Val Loss: 4.1262 | Val Acc: 0.2367\n",
-      "Epoch 17 | Train Loss: 1.1004 | Train Acc: 0.6112 | Val Loss: 4.2139 | Val Acc: 0.2509\n",
-      "Epoch 18 | Train Loss: 1.0079 | Train Acc: 0.6714 | Val Loss: 4.4050 | Val Acc: 0.2438\n",
-      "Epoch 19 | Train Loss: 0.9349 | Train Acc: 0.6838 | Val Loss: 4.3741 | Val Acc: 0.2403\n",
-      "Epoch 20 | Train Loss: 0.8617 | Train Acc: 0.7192 | Val Loss: 4.5872 | Val Acc: 0.2367\n",
-      "Epoch 21 | Train Loss: 0.7873 | Train Acc: 0.7298 | Val Loss: 4.9170 | Val Acc: 0.2615\n",
-      "Early stopping at epoch 21\n"
+      "Epoch 1 | Train Loss: 3.7623 | Train Acc: 0.0907 | Val Loss: 3.5616 | Val Acc: 0.0870\n",
+      "Epoch 2 | Train Loss: 3.2121 | Train Acc: 0.1995 | Val Loss: 3.0699 | Val Acc: 0.2423\n",
+      "Epoch 3 | Train Loss: 2.6627 | Train Acc: 0.3409 | Val Loss: 2.5915 | Val Acc: 0.3968\n",
+      "Epoch 4 | Train Loss: 2.1605 | Train Acc: 0.4585 | Val Loss: 2.3523 | Val Acc: 0.4343\n",
+      "Epoch 5 | Train Loss: 1.8307 | Train Acc: 0.5061 | Val Loss: 2.1383 | Val Acc: 0.4872\n",
+      "Epoch 6 | Train Loss: 1.5791 | Train Acc: 0.5726 | Val Loss: 2.0171 | Val Acc: 0.5290\n",
+      "Epoch 7 | Train Loss: 1.4054 | Train Acc: 0.6015 | Val Loss: 2.0271 | Val Acc: 0.5316\n",
+      "Epoch 8 | Train Loss: 1.2348 | Train Acc: 0.6341 | Val Loss: 1.9249 | Val Acc: 0.5299\n",
+      "Epoch 9 | Train Loss: 1.1018 | Train Acc: 0.6648 | Val Loss: 1.9628 | Val Acc: 0.5427\n",
+      "Epoch 10 | Train Loss: 0.9775 | Train Acc: 0.7011 | Val Loss: 2.0417 | Val Acc: 0.5444\n",
+      "Epoch 11 | Train Loss: 0.8966 | Train Acc: 0.7164 | Val Loss: 2.0182 | Val Acc: 0.5674\n",
+      "Epoch 12 | Train Loss: 0.7984 | Train Acc: 0.7459 | Val Loss: 2.0438 | Val Acc: 0.5776\n",
+      "Epoch 13 | Train Loss: 0.7249 | Train Acc: 0.7668 | Val Loss: 2.1785 | Val Acc: 0.5845\n",
+      "Epoch 14 | Train Loss: 0.6450 | Train Acc: 0.7871 | Val Loss: 2.2390 | Val Acc: 0.5529\n",
+      "Epoch 15 | Train Loss: 0.6269 | Train Acc: 0.7975 | Val Loss: 2.1613 | Val Acc: 0.5853\n",
+      "Epoch 16 | Train Loss: 0.5547 | Train Acc: 0.8154 | Val Loss: 2.2171 | Val Acc: 0.5879\n",
+      "Epoch 17 | Train Loss: 0.5079 | Train Acc: 0.8293 | Val Loss: 2.3075 | Val Acc: 0.5973\n",
+      "Epoch 18 | Train Loss: 0.4851 | Train Acc: 0.8342 | Val Loss: 2.4319 | Val Acc: 0.6075\n",
+      "Epoch 19 | Train Loss: 0.4435 | Train Acc: 0.8515 | Val Loss: 2.7066 | Val Acc: 0.5794\n",
+      "Epoch 20 | Train Loss: 0.4195 | Train Acc: 0.8598 | Val Loss: 2.4176 | Val Acc: 0.6058\n",
+      "Epoch 21 | Train Loss: 0.3880 | Train Acc: 0.8686 | Val Loss: 2.5361 | Val Acc: 0.6015\n",
+      "Epoch 22 | Train Loss: 0.3649 | Train Acc: 0.8745 | Val Loss: 2.6634 | Val Acc: 0.5913\n",
+      "Epoch 23 | Train Loss: 0.3359 | Train Acc: 0.8837 | Val Loss: 2.6258 | Val Acc: 0.5870\n",
+      "Epoch 24 | Train Loss: 0.3219 | Train Acc: 0.8916 | Val Loss: 2.5130 | Val Acc: 0.5930\n",
+      "Epoch 25 | Train Loss: 0.3002 | Train Acc: 0.8976 | Val Loss: 2.6503 | Val Acc: 0.5879\n",
+      "Epoch 26 | Train Loss: 0.2782 | Train Acc: 0.9080 | Val Loss: 2.9638 | Val Acc: 0.6135\n",
+      "Epoch 27 | Train Loss: 0.2782 | Train Acc: 0.9031 | Val Loss: 2.4616 | Val Acc: 0.6007\n",
+      "Epoch 28 | Train Loss: 0.2452 | Train Acc: 0.9147 | Val Loss: 2.8413 | Val Acc: 0.6092\n",
+      "Epoch 29 | Train Loss: 0.2273 | Train Acc: 0.9198 | Val Loss: 2.8422 | Val Acc: 0.5956\n",
+      "Epoch 30 | Train Loss: 0.2438 | Train Acc: 0.9123 | Val Loss: 2.7857 | Val Acc: 0.6135\n",
+      "Epoch 31 | Train Loss: 0.2214 | Train Acc: 0.9228 | Val Loss: 2.8845 | Val Acc: 0.6109\n",
+      "Epoch 32 | Train Loss: 0.2043 | Train Acc: 0.9255 | Val Loss: 2.9549 | Val Acc: 0.6195\n",
+      "Epoch 33 | Train Loss: 0.1946 | Train Acc: 0.9311 | Val Loss: 2.9060 | Val Acc: 0.6135\n",
+      "Epoch 34 | Train Loss: 0.1787 | Train Acc: 0.9386 | Val Loss: 3.1953 | Val Acc: 0.6101\n",
+      "Epoch 35 | Train Loss: 0.1938 | Train Acc: 0.9341 | Val Loss: 3.0183 | Val Acc: 0.6280\n",
+      "Epoch 36 | Train Loss: 0.1778 | Train Acc: 0.9379 | Val Loss: 2.9623 | Val Acc: 0.6143\n",
+      "Epoch 37 | Train Loss: 0.1560 | Train Acc: 0.9443 | Val Loss: 3.4755 | Val Acc: 0.6101\n",
+      "Epoch 38 | Train Loss: 0.1680 | Train Acc: 0.9409 | Val Loss: 3.0464 | Val Acc: 0.6212\n",
+      "Epoch 39 | Train Loss: 0.1651 | Train Acc: 0.9443 | Val Loss: 3.0433 | Val Acc: 0.6152\n",
+      "Epoch 40 | Train Loss: 0.1607 | Train Acc: 0.9464 | Val Loss: 3.4379 | Val Acc: 0.6126\n",
+      "Epoch 41 | Train Loss: 0.1488 | Train Acc: 0.9473 | Val Loss: 3.1609 | Val Acc: 0.6365\n",
+      "Epoch 42 | Train Loss: 0.1431 | Train Acc: 0.9490 | Val Loss: 3.0970 | Val Acc: 0.6143\n",
+      "Epoch 43 | Train Loss: 0.1284 | Train Acc: 0.9524 | Val Loss: 3.3431 | Val Acc: 0.6288\n",
+      "Epoch 44 | Train Loss: 0.1490 | Train Acc: 0.9496 | Val Loss: 3.3501 | Val Acc: 0.6263\n",
+      "Epoch 45 | Train Loss: 0.1223 | Train Acc: 0.9569 | Val Loss: 3.5898 | Val Acc: 0.6092\n",
+      "Epoch 46 | Train Loss: 0.1340 | Train Acc: 0.9550 | Val Loss: 3.3354 | Val Acc: 0.6135\n",
+      "Epoch 47 | Train Loss: 0.1237 | Train Acc: 0.9563 | Val Loss: 3.3317 | Val Acc: 0.6092\n",
+      "Epoch 48 | Train Loss: 0.1137 | Train Acc: 0.9580 | Val Loss: 3.2098 | Val Acc: 0.6126\n",
+      "Epoch 49 | Train Loss: 0.1088 | Train Acc: 0.9622 | Val Loss: 3.3440 | Val Acc: 0.6271\n",
+      "Epoch 50 | Train Loss: 0.1099 | Train Acc: 0.9595 | Val Loss: 3.4275 | Val Acc: 0.6160\n",
+      "Epoch 51 | Train Loss: 0.0970 | Train Acc: 0.9678 | Val Loss: 3.4511 | Val Acc: 0.6212\n",
+      "Epoch 52 | Train Loss: 0.0980 | Train Acc: 0.9644 | Val Loss: 3.8723 | Val Acc: 0.6075\n",
+      "Epoch 53 | Train Loss: 0.0945 | Train Acc: 0.9691 | Val Loss: 3.4615 | Val Acc: 0.6152\n",
+      "Epoch 54 | Train Loss: 0.0851 | Train Acc: 0.9686 | Val Loss: 3.8971 | Val Acc: 0.6220\n",
+      "Epoch 55 | Train Loss: 0.1053 | Train Acc: 0.9637 | Val Loss: 3.9270 | Val Acc: 0.6186\n",
+      "Epoch 56 | Train Loss: 0.1170 | Train Acc: 0.9627 | Val Loss: 3.7440 | Val Acc: 0.6109\n",
+      "Epoch 57 | Train Loss: 0.1062 | Train Acc: 0.9650 | Val Loss: 3.7312 | Val Acc: 0.6152\n",
+      "Epoch 58 | Train Loss: 0.1053 | Train Acc: 0.9639 | Val Loss: 4.1333 | Val Acc: 0.6177\n",
+      "Epoch 59 | Train Loss: 0.1029 | Train Acc: 0.9665 | Val Loss: 3.3908 | Val Acc: 0.6118\n",
+      "Epoch 60 | Train Loss: 0.0878 | Train Acc: 0.9744 | Val Loss: 3.7175 | Val Acc: 0.6177\n",
+      "Epoch 61 | Train Loss: 0.0865 | Train Acc: 0.9697 | Val Loss: 3.7800 | Val Acc: 0.6314\n",
+      "Early stopping at epoch 61\n"
      ]
     }
    ],
@@ -201,7 +283,7 @@
     "# Early stopping 參數\n",
     "best_val_loss = float('inf')\n",
     "best_val_accuracy = 0.0\n",
-    "patience = 10  # 容忍 10 次沒改善\n",
+    "patience = 20  # 容忍 10 次沒改善\n",
     "counter = 0\n",
     "best_model_state = None\n",
     "\n",
